# xlsagent

./: .gitignore  README.md  setup-windows.bat
files/shop-sales/: shop-sales.xlsm
files/shop-stats/: shop-stats.xlsm
skills/excel-analyzer/: SKILL.md  pyproject.toml
skills/excel-analyzer/src/: __init__.py  main.py  models.py
skills/excel-analyzer/src/auth/: __init__.py  session_store.py  sso_handler.py
skills/excel-analyzer/src/download/: __init__.py  sharepoint.py
skills/excel-analyzer/src/extractors/: __init__.py  charts.py  connections.py  controls.py  formulas.py  hyperlinks.py  power_query.py  sheets.py  tables.py
skills/excel-analyzer/src/reports/: __init__.py  html_builder.py  markdown_builder.py
skills/excel-analyzer/src/screenshots/: __init__.py  desktop_excel.py  excel_online.py
skills/excel-analyzer/tests/: __init__.py  conftest.py  test_extractors.py  test_models.py  test_reports.py
