[project]
name = "excel-analyzer"
version = "1.0.0"
description = "Comprehensive Excel workbook analyzer for Claude Code"
requires-python = ">=3.11"

dependencies = [
    # Core extraction library
    # For local development:
    "xls-extract @ file:///${PROJECT_ROOT}/../../../packages/xls-extract",
    # For production (uncomment and use your GitHub URL):
    # "xls-extract @ git+ssh://git@github.com/brianchk/xls-extract.git@main",

    # Report generation
    "jinja2>=3.1.0",           # HTML templating
    "pygments>=2.17.0",        # Syntax highlighting

    # Screenshots (Windows)
    "xlwings>=0.30.0",         # Desktop Excel automation
    "pillow>=10.0.0",          # Image processing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]
windows = [
    "pywin32>=306",            # Windows API for Excel screenshots
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
analyze-excel = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
