[project]
name = "excel-analyzer"
version = "1.0.0"
description = "Comprehensive Excel workbook analyzer for Claude Code"
requires-python = ">=3.11"

dependencies = [
    # xls-extract with all features (extraction + reports + screenshots)
    "xls-extract[all] @ git+https://github.com/brianchk/xls-extract.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
analyze-excel = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
